--- a/website/search_for_me.html
+++ b/website/search_for_me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Basetao | Terms of service</title>
+	<title>Basetao | Homepage</title>
 
 	<!-- Meta Tags -->
 	<meta charset="utf-8">
@@ -149,11 +149,11 @@
 
                         <!-- Nav item -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="pageMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help center</a>
+                            <a class="nav-link dropdown-toggle active" href="#" id="pageMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help center</a>
                             <ul class="dropdown-menu" aria-labelledby="pageMenu">
                                 <!-- Dropdown submenu -->
                                 <li> <a class="dropdown-item" href="faq.html">FAQ</a></li>
-                                <li> <a class="dropdown-item" href="search_for_me.html">Search for me</a></li>
+                                <li> <a class="dropdown-item active" href="search_for_me.html">Search for me</a></li>
                                 <li> <a class="dropdown-item" href="mail_issue.html">Mail issue</a></li>
                                 <li> <a class="dropdown-item" href="cost_calculator.html">Cost calculator</a></li>
                             </ul>
@@ -305,101 +305,66 @@
     <!-- ======================= Main Banner START -->
     <section class="py-0">
         <div class="container">
-            <div class="row justify-content-md-center">
-                <div class="col-md-4 mt-lg-7 pt-lg-5 text-center text-lg-end">
-                    <h1>Terms of service</h1>
-                </div>
-                <div class="col-md-4 mt-lg-3 d-none d-lg-block text-start">
-                    <img src="assets/images/element/terms.svg" alt="">
+            <div class="row">
+                <div class="col-12 mb-4">
+                    <div class="bg-light p-4 rounded-3 position-relative text-center">
+                        <h1 class="mb-md-5 mt-md-5 display-5">
+                            <span class="position-relative z-index-9">
+                                Search for me
+                            </span>
+                            <span class="position-absolute top-50 start-50 translate-middle d-none d-md-block mt-4">
+                                <svg width="445.5px" height="21.5px" viewBox="0 0 445.5 21.5">
+                                    <path class="fill-primary opacity-7" d="M409.9,2.6c-9.7-0.6-19.5-1-29.2-1.5c-3.2-0.2-6.4-0.2-9.7-0.3c-7-0.2-14-0.4-20.9-0.5 c-3.9-0.1-7.8-0.2-11.7-0.3c-1.1,0-2.3,0-3.4,0c-2.5,0-5.1,0-7.6,0c-11.5,0-23,0-34.5,0c-2.7,0-5.5,0.1-8.2,0.1 c-6.8,0.1-13.6,0.2-20.3,0.3c-7.7,0.1-15.3,0.1-23,0.3c-12.4,0.3-24.8,0.6-37.1,0.9c-7.2,0.2-14.3,0.3-21.5,0.6 c-12.3,0.5-24.7,1-37,1.5c-6.7,0.3-13.5,0.5-20.2,0.9C112.7,5.3,99.9,6,87.1,6.7C80.3,7.1,73.5,7.4,66.7,8 C54,9.1,41.3,10.1,28.5,11.2c-2.7,0.2-5.5,0.5-8.2,0.7c-5.5,0.5-11,1.2-16.4,1.8c-0.3,0-0.7,0.1-1,0.1c-0.7,0.2-1.2,0.5-1.7,1 C0.4,15.6,0,16.6,0,17.6c0,1,0.4,2,1.1,2.7c0.7,0.7,1.8,1.2,2.7,1.1c6.6-0.7,13.2-1.5,19.8-2.1c6.1-0.5,12.3-1,18.4-1.6 c6.7-0.6,13.4-1.1,20.1-1.7c2.7-0.2,5.4-0.5,8.1-0.7c10.4-0.6,20.9-1.1,31.3-1.7c6.5-0.4,13-0.7,19.5-1.1c2.7-0.1,5.4-0.3,8.1-0.4 c10.3-0.4,20.7-0.8,31-1.2c6.3-0.2,12.5-0.5,18.8-0.7c2.1-0.1,4.2-0.2,6.3-0.2c11.2-0.3,22.3-0.5,33.5-0.8 c6.2-0.1,12.5-0.3,18.7-0.4c2.2-0.1,4.4-0.1,6.7-0.1c11.5-0.1,23-0.2,34.6-0.4c7.2-0.1,14.4-0.1,21.6-0.1c12.2,0,24.5,0.1,36.7,0.1 c2.4,0,4.8,0.1,7.2,0.2c6.8,0.2,13.5,0.4,20.3,0.6c5.1,0.2,10.1,0.3,15.2,0.4c3.6,0.1,7.2,0.4,10.8,0.6c10.6,0.6,21.1,1.2,31.7,1.8 c2.7,0.2,5.4,0.4,8,0.6c2.9,0.2,5.8,0.4,8.6,0.7c0.4,0.1,0.9,0.2,1.3,0.3c1.1,0.2,2.2,0.2,3.2-0.4c0.9-0.5,1.6-1.5,1.9-2.5 c0.6-2.2-0.7-4.5-2.9-5.2c-1.9-0.5-3.9-0.7-5.9-0.9c-1.4-0.1-2.7-0.3-4.1-0.4c-2.6-0.3-5.2-0.4-7.9-0.6 C419.7,3.1,414.8,2.9,409.9,2.6z"></path>
+                                </svg>
+                            </span>
+                        </h1>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="py-0">
-        <div class="container">
-            <div class="row col-md-10 mx-auto">
-                <div class="vstack">
-                    <div class="card p-0 bg-transparent">
-						<div class="card-header border-bottom bg-transparent px-0">
-							<h4 class="card-title mb-0">Acceptance of terms</h4>
-						</div>
-						<div class="card-body px-0">
-							<p>Welcome to basetao.com! Our services are subject to the following Terms of Service ("TOS"), which we may update from time to time without notice. We recommend that you review this page periodically to stay informed of any changes. By visiting or ordering from Basetao.com, you agree to these terms. Please read them carefully. Additionally, when you use any current or future Basetao service or business, you will be subject to the corresponding guidelines, terms, and agreements.</p>
-						</div>
-					</div>
-                    <div class="card p-0 bg-transparent">
-						<div class="card-header border-bottom bg-transparent px-0">
-							<h4 class="card-title mb-0">Electronic communication</h4>
-						</div>
-						<div class="card-body px-0">
-							<p>By visiting basetao.com or sending emails to us, you are communicating with us electronically and consenting to receive electronic communications from us. We will communicate with you via email or by sending messages on this site. You agree that all agreements, notices, disclosures, and other communications that we provide to you electronically meet any legal requirement that such communications be in writing.</p>
-						</div>
-					</div>
-                    <div class="card p-0 bg-transparent">
-						<div class="card-header border-bottom bg-transparent px-0">
-							<h4 class="card-title mb-0">Your account, password and security</h4>
-						</div>
-						<div class="card-body px-0">
-							<p>By using this site, you are responsible for keeping your account and password confidential and for any activities that occur under your account. It is your responsibility to log out of your account at the end of each session and inform basetao immediately if there is any unauthorized use of your password or account. Basetao is not liable for any loss or damage resulting from the compromise of your account.</p>
-						</div>
-					</div>
-                    <div class="card p-0 bg-transparent">
-						<div class="card-header border-bottom bg-transparent px-0">
-							<h4 class="card-title mb-0">Registration</h4>
-						</div>
-						<div class="card-body px-0">
-							<p>When you register, you agree that your email address is valid and to receive newsletters and advertisements from us. If you wish to cancel email communications from our company, please contact our service department at basetao2you@163.com.</p>
-						</div>
-					</div>
-                    <div class="card p-0 bg-transparent">
-						<div class="card-header border-bottom bg-transparent px-0">
-							<h4 class="card-title mb-0">General prohibitions</h4>
-						</div>
-						<div class="card-body px-0">
-							<p>To be able to use the Service, you must agree not to:</p>
-                            <ul>
-                                <li>Upload, post, email, transmit, or make available any Content that is illegal, harmful, threatening, abusive, harassing, tortious, defamatory, vulgar, obscene, libelous, invasive of someone's privacy, hateful, or racially, ethnically, or otherwise offensive.</li>
-                                <li>Upload, post, email, transmit, or make available any advertising, promotional materials, "junk mail," "spam," "chain letters," "pyramid schemes," or any other type of solicitation, unless it is allowed in designate areas like shopping. Any unsolicited or unauthorized solicitation is strictly prohibited, and if you are caught doing so, you will be promptly banned from the Service.</li>
-                                <li>Upload, post, email, transmit, or make available any material that contains software viruses or any other computer code, files, or programs intended to interrupt, destroy, or limit the functionality of any computer software, hardware, or telecommunications equipment.</li>
-                                <li>Upload, post, email, or transmit any content that: (i) you are not legally authorized to copy, transmit, distribute, or display; (ii) you do not have the consent or permission of each identifiable person in the content to use their name, voice, signature, photograph, or likeness; (iii) infringes or misappropriates the intellectual property rights or violates the privacy rights of any third party (including, but not limited to, copyright, trademark, patent, trade secret, or other intellectual property right, or moral right or right of publicity); (iv) is false or misleading; (v) is defamatory; (vi) is obscene, pornographic, or offensive; (vii) promotes bigotry, racism, hatred, or harm against any individual or group; or (viii) violates or encourages any conduct that would violate any applicable law or regulation or give rise to civil liability.</li>
-                                <li>Harm or threaten to harm other users in any way, nor interfere with or attempt to interfere with the access of any user, host, or network, including, but not limited to, by sending a virus, overloading, flooding, spamming, or mail-bombing the Service.</li>
-                                <li>Impersonate or misrepresent your affiliation with any person or entity.</li>
-                            </ul>
-                            <p>Basetao has the right to investigate and take legal action against any violations of the above terms, including possible infringement of intellectual property rights and security breaches, to the fullest extent of the law. Basetao may involve and cooperate with law enforcement authorities in prosecuting users who violate this Agreement. Although Basetao has no obligation to monitor your access to or use of the Service, it has the right to do so for the purpose of operating the Service, ensuring your compliance with this Agreement, or complying with applicable laws or court orders. Basetao reserves the right at all times to disclose any User Files, in its sole discretion, as necessary to (a) comply with any law, regulation, or governmental request or (b) reduce or prevent what Basetao considers to be, in its sole discretion, a serious or imminent threat to your health or safety, or the health or safety of another.</p>
-						</div>
-					</div>
-                    <div class="card p-0 bg-transparent">
-						<div class="card-header border-bottom bg-transparent px-0">
-							<h4 class="card-title mb-0">Links</h4>
-						</div>
-						<div class="card-body px-0">
-							<p>Basetao may provide links to third-party websites or resources. By using these links, you acknowledge and agree that Basetao is not responsible for the availability of such external sites or resources and does not endorse or accept responsibility for any content, advertising, products, or other materials on or available from such sites or resources. Additionally, you acknowledge and agree that Basetao will not be liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with the use of or reliance on any such content, goods, or services available on or through any such site or resource.</p>
-						</div>
-					</div>
-                    <div class="card p-0 bg-transparent">
-						<div class="card-header border-bottom bg-transparent px-0">
-							<h4 class="card-title mb-0">Copyright</h4>
-						</div>
-						<div class="card-body px-0">
-							<p>All content, including text, graphics, logos, button icons, images, audio clips, digital downloads, data compilations, and software, that appears on this site is the property of Basetao or its content suppliers and is protected by China and international copyright laws. The compilation of all content on this site is exclusively owned by Basetao and is protected by China and international copyright laws. The software used on this site is the property of Basetao or its software suppliers and is also protected by China and international copyright laws.</p>
-						</div>
-					</div>
-                    <div class="card p-0 bg-transparent">
-						<div class="card-header border-bottom bg-transparent px-0">
-							<h4 class="card-title mb-0">Modifications and severability</h4>
-						</div>
-						<div class="card-body px-0">
-							<p>Basetao reserves the right to modify our site, policies, and these Terms of Use at any time. If any of these terms are considered invalid, void, or unenforceable for any reason, that term will be considered severable and will not affect the validity or enforceability of any remaining conditions.</p>
-						</div>
-					</div>
-                    <div class="card p-0 bg-transparent mb-md-5">
-						<div class="card-header border-bottom bg-transparent px-0">
-							<h4 class="card-title mb-0">Governing law</h4>
-						</div>
-						<div class="card-body px-0">
-							<p>These Terms of Service, as well as any separate agreements for the provision of services, shall be governed by and construed in accordance with the laws of the United Kingdom.</p>
-						</div>
-					</div>                    
+            <div class="row">
+                <div class="col-12 mb-4">
+                    <div class="bg-light position-relative overflow-hidden p-4 p-sm-5 rounded-3">
+                        <figure class="position-absolute translate-middle">
+                            <svg class="fill-orange" width="250px" height="255px" viewBox="0 0 300.24 305.85">
+                                <path d="M72.33,265.03c-41.74-43.54-67.69-97.8-72.24-159.79C-2.45,59.51,47.02,6.52,101.33,1.31 c61.88-6.72,117.52,12.02,155.39,64.52c16.58,23.1,27.89,49.78,35.88,75.54c18.39,55.77,2.61,105.79-37.18,136.4 c-45.06,34.18-108.2,37.69-155.75,7.58C90.6,279.3,82.55,272.11,72.33,265.03z"></path>
+                            </svg>
+                        </figure>
+                        <figure class="position-absolute top-90 start-100 translate-middle">
+                            <svg class="fill-warning" width="177.91px" height="132.35px" viewBox="0 0 177.91 132.35">
+                                <path d="M128.84,69.77c2.74,3.33,2.92,6.79,0.71,10.54c0.77,0,1.31,0,1.79,0c7.56,0,15.12,0.3,22.68,1.13 c4.94,0.54,9.82,1.31,14.52,2.86c1.73,0.54,3.39,1.25,5,2.08c1.07,0.54,2.08,1.37,2.92,2.26c1.85,2.02,1.9,4.7,0.36,6.96 c-0.83,1.25-1.96,2.26-3.21,2.98c-2.2,1.25-4.4,2.44-6.73,3.45c-6.25,2.74-12.74,4.82-19.23,6.79c-7.98,2.44-15.95,4.76-23.93,7.14 c-0.48,0.12-1.01,0.3-1.73,0.54c0.54,0.3,0.89,0.48,1.25,0.65c1.43,0.77,2.44,1.85,2.5,3.51c0.06,1.79-0.83,3.04-2.32,3.81 c-1.19,0.6-2.56,1.13-3.87,1.49c-5.3,1.49-10.71,2.32-16.13,3.15c-10.36,1.55-20.77,2.62-31.25,3.04 c-8.93,0.36-17.8,0.36-26.67-1.01c-3.33-0.54-6.67-1.25-9.76-2.56c-1.67-0.71-3.27-1.55-4.64-2.8c-3.15-2.8-3.87-6.61-1.9-10.36 c1.01-1.9,2.44-3.51,4.05-4.94c3.15-2.8,6.79-4.94,10.48-6.85c0.6-0.3,1.25-0.65,1.85-1.19c-0.36,0-0.71,0-1.01,0 c-6.07,0.3-12.2,0.36-18.27-0.48c-2.74-0.36-5.42-0.95-8.04-2.02c-1.85-0.77-3.63-1.73-5.06-3.15c-2.62-2.62-3.45-5.71-2.5-9.29 c0.54-2.02,1.49-3.81,2.92-5.36c1.67-1.85,3.33-3.69,5.24-5.24c3.15-2.56,6.49-4.82,9.76-7.26c0.48-0.36,0.89-0.65,1.67-1.25 c-0.71-0.06-1.07-0.12-1.49-0.12c-3.57,0-7.14,0.06-10.71-0.12c-1.96-0.06-3.99-0.42-5.95-0.83c-1.19-0.24-2.38-0.71-3.45-1.31 C4.91,64,3.6,60.3,5.15,56.32c0.83-2.14,2.26-3.93,3.87-5.6c0.54-0.6,1.13-1.13,1.85-1.85c-0.48-0.06-0.77-0.12-1.07-0.12 c-1.37-0.06-2.74-0.06-4.11-0.24c-0.95-0.12-1.96-0.42-2.86-0.83c-2.56-1.25-3.51-3.93-2.32-6.49c0.48-1.01,1.19-2.02,1.96-2.74 c1.49-1.31,3.04-2.62,4.76-3.63c3.51-2.02,7.02-3.99,10.71-5.71c5.6-2.44,11.19-4.7,16.73-7.08c0.95-0.42,1.96-0.83,2.86-1.37 c8.04-4.94,16.73-8.51,25.65-11.31c14.64-4.64,29.64-7.62,45-8.93c6.19-0.54,12.38-0.65,18.51,0.18c2.38,0.3,4.7,0.77,6.9,1.79 c1.13,0.54,2.32,1.13,3.27,1.96c2.38,1.96,2.98,5,1.49,7.74c-0.6,1.13-1.37,2.2-2.32,3.04c-1.96,1.79-4.05,3.45-6.25,4.94 c-4.35,2.98-8.99,5.42-13.63,7.8c-0.48,0.24-0.89,0.48-1.37,1.01c0.6,0.06,1.13,0.12,1.73,0.24c1.13,0.24,2.26,0.42,3.33,0.77 c4.11,1.49,4.88,5.48,1.67,8.39c-1.01,0.89-2.2,1.73-3.39,2.38c-2.62,1.43-5.36,2.74-8.04,3.99c-2.38,1.07-4.76,2.08-7.2,3.33 c0.36,0.06,0.77,0.12,1.13,0.12c6.49,0.3,12.92,0.77,19.29,1.9c3.33,0.6,6.67,1.25,9.82,2.56c1.37,0.6,2.8,1.25,3.99,2.14 c3.1,2.32,3.39,5.95,0.83,8.87c-0.83,0.89-1.79,1.73-2.8,2.44c-1.67,1.13-3.45,2.02-5.18,3.04 C129.67,69.29,129.32,69.53,128.84,69.77z"></path>
+                            </svg>
+                        </figure>
+                        <div class="row g-4">
+                            <!-- Card START -->
+                            <div class="col-12">
+                                <div class="card card-body p-4 mb-4">
+                                    <h5>Basetao search for you</h5>
+                                    <p class="mb-0">If you're unable to locate the items you desire, give our "Search for Me" service a go. Simply fill out the required details, add it to your cart, and submit your order. We'll do our utmost to locate the items you want based on the information you've provided. Our service fee is just 1CNY, and you'll receive a refund if we're unable to locate the item.</p>
+                                </div>
+                                <div class="card card-body p-4">
+                                    <h5>Step 1: Please fill in the item information</h5>
+                                    <form class="row">
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text" id="itemurl">Picture URL<span class="text-danger">*</span></span>
+                                            <input type="text" class="form-control" placeholder="https://item.taobao.com/item.htm?id=642747185795" aria-label="itemurl" aria-describedby="itemurl" required>
+                                        </div>
+                                        <div class="input-group mb-3">
+                                            <span class="input-group-text" id="itemname">Item name<span class="text-danger">*</span></span>
+                                            <input type="text" class="form-control" placeholder="回力男鞋运动鞋男2023新款休闲鞋潮流老爹鞋子男士运动鞋男跑步鞋" aria-label="itemname" aria-describedby="itemname" required>
+                                        </div>
+                                        <h5>Step 2: Please add more detailed information</h5>
+                                        <div class="form-group mb-4">
+                                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                        </div>
+                                        <p class="text-center">
+                                            <button class="btn btn-primary-soft">Add to cart <i class="bi bi-cart-fill"></i></button>
+                                        </p>
+                                    </form>
+                                </div>
+                            </div>
+                            <!-- Card END -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
