--- a/website/self_help_order.html
+++ b/website/self_help_order.html
@@ -176,8 +176,8 @@
                 <ul class="nav flex-row align-items-center list-unstyled ms-xl-auto">
 
                     <!-- Shopping cart START -->
-                    <li class="nav-item dropdown ms-0 ms-md-3">
-                        <a class="nav-notification btn btn-light p-0 mb-0" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+                    <li class="nav-item dropdown me-3 me-md-0">
+                        <a class="nav-notification btn btn-light p-0 mb-0" href="cart.html" role="button">
                             <i class="bi bi-cart fa-fw"></i>
                         </a>
                     </li>
@@ -256,8 +256,8 @@
 
                             <!-- Links -->
                             <li> <hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#"><i class="bi bi-person-fill fa-fw me-2"></i>My account</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="bi bi-currency-yen fa-fw me-2"></i>Top-up</a></li>
+                            <li><a class="dropdown-item" href="account.html"><i class="bi bi-person-fill fa-fw me-2"></i>My account</a></li>
+                            <li><a class="dropdown-item" href="top-up.html"><i class="bi bi-currency-yen fa-fw me-2"></i>Top-up</a></li>
                             <li><a class="dropdown-item bg-danger-soft-hover" href="index.html"><i class="bi bi-power fa-fw me-2"></i>Sign Out</a></li>
                             <li> <hr class="dropdown-divider"></li>
 
@@ -380,7 +380,7 @@
                                             <label for="itemcolor">Color</label>
                                             <input type="text" class="form-control" placeholder="灰色" id="itemcolor">
                                         </div>
-                                        <p class="text-center">
+                                        <p class="text-center mb-0">
                                             <button class="btn btn-primary-soft">Add to cart <i class="bi bi-cart-fill"></i></button>
                                             <button class="btn btn-danger-soft">Add to favourite <i class="bi bi-heart-fill"></i></button>
                                             <button class="btn btn-success-soft">Make a note <i class="bi bi-pen-fill"></i></button>
