Nav menu cart > activated

--- a/website/cart.html
+++ b/website/cart.html
@@ -149,13 +149,13 @@
 
 						<!-- Nav item -->
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle active" href="#" id="pageMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help center</a>
+							<a class="nav-link dropdown-toggle" href="#" id="pageMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Help center</a>
 							<ul class="dropdown-menu" aria-labelledby="pageMenu">
 								<!-- Dropdown submenu -->
 								<li> <a class="dropdown-item" href="faq.html">FAQ</a></li>
 								<li> <a class="dropdown-item" href="search_for_me.html">Search for me</a></li>
 								<li> <a class="dropdown-item" href="mail_issue.html">Mail issue</a></li>
-								<li> <a class="dropdown-item active" href="cost_calculator.html">Cost calculator</a></li>
+								<li> <a class="dropdown-item" href="cost_calculator.html">Cost calculator</a></li>
 							</ul>
 						</li>
 						<!-- Nav Search START -->
@@ -177,7 +177,7 @@
 
 					<!-- Shopping cart START -->
                     <li class="nav-item dropdown me-3 me-md-0">
-                        <a class="nav-notification btn btn-light p-0 mb-0" href="cart.html" role="button">
+                        <a class="nav-notification btn btn-primary p-0 mb-0" href="cart.html" role="button">
                             <i class="bi bi-cart fa-fw"></i>
                         </a>
                     </li>
