Add pending orders/pending parcels/shipped parcels

--- a/website/cart.html
+++ b/website/cart.html
@@ -321,10 +321,10 @@
                 <div class="col-12 order-3">
                     <div class="card border p-4">
                         <div class="table-responsive border-0 mb-4">
-                            <table class="table align-middle p-4 mb-0 table-hover table-shrink">
+                            <table class="table align-middle p-4 mb-0 table-shrink">
                                 <thead class="table-light">
                                     <tr>
-                                        <th width="5%" scope="col" rounded-start"><input class="form-check-input" type="checkbox" value="" id="checkAll"></th>
+                                        <th width="5%" scope="col" class="rounded-start"><input class="form-check-input" type="checkbox" value="" id="checkAll"></th>
                                         <th width="40%" scope="col" colspan="2">Item</th>
                                         <th width="17%" scope="col">Details</th>
                                         <th width="8%" scope="col">Price</th>
@@ -345,8 +345,8 @@
                                             </span>
                                         </td>
                                         <td class="border-0">
-                                            <p class="mb-0">Size: L</p>
-                                            <p class="mb-0">Color: white</p>
+                                            <p class="mb-0">Size:&nbsp;L</p>
+                                            <p class="mb-0">Color:&nbsp;white</p>
                                         </td>
                                         <td class="border-0">¥<span class="text-danger">110</span></td>
                                         <td class="border-0">
