--- a/website/top-up.html
+++ b/website/top-up.html
@@ -390,7 +390,7 @@
                                         </li>
                                         <h6>Account</h3>
                                         <li class="nav-item nav-item-sm">
-                                            <a class="nav-link" href="top-up.html"><small>Recharge</small></a>
+                                            <a class="nav-link active" href="top-up.html"><small>Recharge</small></a>
                                             <a class="nav-link" href="account_transactions.html"><small>Transactions</small></a>
                                             <a class="nav-link" href="account_membership.html"><small>Membership</small></a>
                                             <a class="nav-link" href="account_points.html"><small>Points</small></a>
@@ -438,7 +438,7 @@
                                                 </svg>
                                             </a>               
                                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="creditcardDropdown2" style="">
-                                                <li><a class="dropdown-item" href="top-up"><i class="bi bi-currency-yen fa-fw me-2"></i>Top-up</a></li>
+                                                <li><a class="dropdown-item" href="top-up.html"><i class="bi bi-currency-yen fa-fw me-2"></i>Top-up</a></li>
                                             </ul>
                                         </div>
                                         <!-- Card action END -->
